--- a/2task/2task.csproj
+++ b/2task/2task.csproj
@@ -41,6 +41,9 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
+    <Reference Include="Verification">
+      <HintPath>..\..\Verification\Verification\bin\Debug\Verification.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Program.cs" />
